// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Teaser Grid Block should render OneColumn 1`] = `
<DocumentFragment>
  <div
    class="css-1ek02iu-TeaserGridBlockWrapper e1xnbuxv0"
  >
    <article
      class="css-1m26q3d-TeaserWrapper e18of27r4"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-149wvsa-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-1xecuhw-TeaserInnerWrapper e18of27r3"
        >
          <img
            alt="An image description"
            class="css-1kwlm9a-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
          <time
            class="css-3uu3f-TeaserDate e18of27r1"
            datetime="2023-01-01T00:00:00.000Z"
          >
            01.01.2023
          </time>
          <header
            class="css-4se2pd-TeaserTitle e18of27r2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title: Title
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-aym45s-TeaserWrapper e18of27r4"
      x="0"
      y="1"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-149wvsa-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-1xecuhw-TeaserInnerWrapper e18of27r3"
        >
          <img
            alt="An image description"
            class="css-1kwlm9a-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
          <header
            class="css-4se2pd-TeaserTitle e18of27r2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title: Title
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-kw5wmk-TeaserWrapper e18of27r4"
      x="0"
      y="2"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-149wvsa-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-1xecuhw-TeaserInnerWrapper e18of27r3"
        >
          <img
            alt="An image description"
            class="css-1kwlm9a-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
          <header
            class="css-4se2pd-TeaserTitle e18of27r2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Teambesprechung vom 23.05.
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render ThreeColumns 1`] = `
<DocumentFragment>
  <div
    class="css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
  >
    <article
      class="css-6fi153-TeaserWrapper e18of27r4"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-149wvsa-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-1xecuhw-TeaserInnerWrapper e18of27r3"
        >
          <img
            alt="An image description"
            class="css-1kwlm9a-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
          <time
            class="css-3uu3f-TeaserDate e18of27r1"
            datetime="2023-01-01T00:00:00.000Z"
          >
            01.01.2023
          </time>
          <header
            class="css-4se2pd-TeaserTitle e18of27r2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title: Title
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-1x7gr0z-TeaserWrapper e18of27r4"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-149wvsa-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-1xecuhw-TeaserInnerWrapper e18of27r3"
        >
          <img
            alt="An image description"
            class="css-1kwlm9a-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
          <header
            class="css-4se2pd-TeaserTitle e18of27r2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title: Title
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-5dkcjt-TeaserWrapper e18of27r4"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-149wvsa-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-1xecuhw-TeaserInnerWrapper e18of27r3"
        >
          <img
            alt="An image description"
            class="css-1kwlm9a-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
          <header
            class="css-4se2pd-TeaserTitle e18of27r2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Teambesprechung vom 23.05.
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
  >
    <article
      class="css-6fi153-TeaserWrapper e18of27r4"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-149wvsa-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-1xecuhw-TeaserInnerWrapper e18of27r3"
        >
          <img
            alt="An image description"
            class="css-1kwlm9a-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
          <time
            class="css-3uu3f-TeaserDate e18of27r1"
            datetime="2023-01-01T00:00:00.000Z"
          >
            01.01.2023
          </time>
          <header
            class="css-4se2pd-TeaserTitle e18of27r2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title: Title
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-1x7gr0z-TeaserWrapper e18of27r4"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-149wvsa-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-1xecuhw-TeaserInnerWrapper e18of27r3"
        >
          <img
            alt="An image description"
            class="css-1kwlm9a-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
          <header
            class="css-4se2pd-TeaserTitle e18of27r2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title: Title
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-5dkcjt-TeaserWrapper e18of27r4"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-149wvsa-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-1xecuhw-TeaserInnerWrapper e18of27r3"
        >
          <img
            alt="An image description"
            class="css-1kwlm9a-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
          <header
            class="css-4se2pd-TeaserTitle e18of27r2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Teambesprechung vom 23.05.
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;

exports[`Teaser Grid Block should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="css-hw4wfz-TeaserGridBlockWrapper e1xnbuxv0"
  >
    <article
      class="css-6fi153-TeaserWrapper e18of27r4"
      x="0"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-149wvsa-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-1xecuhw-TeaserInnerWrapper e18of27r3"
        >
          <img
            alt="An image description"
            class="css-1kwlm9a-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
          <time
            class="css-3uu3f-TeaserDate e18of27r1"
            datetime="2023-01-01T00:00:00.000Z"
          >
            01.01.2023
          </time>
          <header
            class="css-4se2pd-TeaserTitle e18of27r2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title: Title
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-1x7gr0z-TeaserWrapper e18of27r4"
      x="4"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-149wvsa-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-1xecuhw-TeaserInnerWrapper e18of27r3"
        >
          <img
            alt="An image description"
            class="css-1kwlm9a-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
          <header
            class="css-4se2pd-TeaserTitle e18of27r2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Pre Title: Title
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
    <article
      class="css-5dkcjt-TeaserWrapper e18of27r4"
      x="8"
      y="0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-149wvsa-MuiTypography-root-MuiLink-root-Teaser"
        href="https://example.com"
      >
        <div
          class="css-1xecuhw-TeaserInnerWrapper e18of27r3"
        >
          <img
            alt="An image description"
            class="css-1kwlm9a-ImageWrapper-Teaser e1shv2yg0"
            loading="lazy"
            srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
            title="An image title"
          />
          <header
            class="css-4se2pd-TeaserTitle e18of27r2"
          >
            <h1
              class="MuiTypography-root MuiTypography-h5 css-ag7rrr-MuiTypography-root"
            >
              Teambesprechung vom 23.05.
            </h1>
          </header>
          <p
            class="MuiTypography-root MuiTypography-h6 css-2ulfj5-MuiTypography-root"
          >
            Lead
          </p>
        </div>
      </a>
    </article>
  </div>
</DocumentFragment>
`;
